--- a/composer.json
+++ b/composer.json
@@ -3,23 +3,17 @@
     "description": "Who Let the Logs Out, Docksal stack.",
     "license": "proprietary",
     "type": "project",
-    "homepage": "https://github.com/johnatas-x/wholetthelogsout",
     "authors": [
         {
             "name": "Johnatas",
             "role": "Maintainer"
         }
     ],
+    "homepage": "https://github.com/johnatas-x/wholetthelogsout",
     "support": {
         "issues": "https://github.com/johnatas-x/drupal-quality-checker/issues",
         "source": "https://github.com/johnatas-x/drupal-quality-checker"
     },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.drupal.org/8"
-        }
-    ],
     "require": {
         "composer/installers": "^2.0",
         "drupal/core-composer-scaffold": "^10.0",
@@ -29,11 +23,30 @@
         "drush/drush": "^11.5"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest"
+        "drupal/coder": "^8.3",
+        "ergebnis/composer-normalize": "^2.30",
+        "friendsoftwig/twigcs": ">=4",
+        "mglaman/phpstan-drupal": "^1.1",
+        "php-parallel-lint/php-parallel-lint": "^1.3",
+        "phpmd/phpmd": "^2.13",
+        "phpro/grumphp": "^1.15",
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-deprecation-rules": "^1.1",
+        "povils/phpmnd": "^3.1",
+        "roave/security-advisories": "dev-latest",
+        "sebastian/phpcpd": "^6.0",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "conflict": {
         "drupal/drupal": "*"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        }
+    ],
     "minimum-stability": "stable",
     "prefer-stable": true,
     "config": {
@@ -42,7 +55,9 @@
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
             "phpstan/extension-installer": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpro/grumphp": true,
+            "ergebnis/composer-normalize": true
         },
         "sort-packages": true
     },
