--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,11 @@
+includes:
+  - phpstan-drupal.neon
+
 parameters:
     level: max
     inferPrivatePropertyTypeFromConstructor: true
     checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false
     paths:
         - web/modules/custom
         - web/themes/custom
