--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -8,15 +8,18 @@ module:
   file: 0
   filter: 0
   language: 0
+  link: 0
   locale: 0
   mysql: 0
   node: 0
+  options: 0
   page_cache: 0
   path_alias: 0
   system: 0
   text: 0
   update: 0
   user: 0
+  wholetthelogsout: 0
   minimal: 1000
 theme:
   drupal8_w3css_theme: 0
