--- a/config/sync/language.types.yml
+++ b/config/sync/language.types.yml
@@ -17,4 +17,11 @@ negotiation:
       language-url-fallback: 1
   language_interface:
     enabled:
-      language-url: 0
+      language-selected: 12
+    method_weights:
+      language-user-admin: -10
+      language-url: -8
+      language-session: -6
+      language-user: -4
+      language-browser: -2
+      language-selected: 12
