--- a/web/themes/custom/wholetthelogsout_w3css/wholetthelogsout_w3css.info.yml
+++ b/web/themes/custom/wholetthelogsout_w3css/wholetthelogsout_w3css.info.yml
@@ -1,4 +1,4 @@
-name: Who Let the Logs Out
+name: Who Let the Logs Out (W3CSS)
 type: theme
 description: 'd8w3css extended for wholetthelogsout.'
 core_version_requirement: ^10
