--- a/config/sync/block.block.wholetthelogsout_w3css_local_actions.yml
+++ b/config/sync/block.block.wholetthelogsout_w3css_local_actions.yml
@@ -3,11 +3,11 @@ langcode: fr
 status: true
 dependencies:
   theme:
-    - wholetthelogsout
+    - wholetthelogsout_w3css
 _core:
   default_config_hash: ABoKnlk20KHqZRw_2Qr4EvaFvH4lnQ2nuhunHeE1JIU
-id: wholetthelogsout_local_actions
-theme: wholetthelogsout
+id: wholetthelogsout_w3css_local_actions
+theme: wholetthelogsout_w3css
 region: content
 weight: -10
 provider: null
