WLTLO-4 : Improve quality & gitignore

--- a/web/modules/custom/wholetthelogsout/wholetthelogsout.services.yml
+++ b/web/modules/custom/wholetthelogsout/wholetthelogsout.services.yml
@@ -6,3 +6,5 @@ services:
     arguments: [ '@entity.repository' ]
     tags:
       - { name: paramconverter }
+  wholetthelogsout.query_helper:
+    class: Drupal\wholetthelogsout\Services\QueryHelper
