--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "friendsoftwig/twigcs": ">=4",
         "mglaman/phpstan-drupal": "^1.1",
         "php-parallel-lint/php-parallel-lint": "^1.3",
+        "phpcompatibility/php-compatibility": "^9.3",
         "phpmd/phpmd": "^2.13",
         "phpro/grumphp": "^1.15",
         "phpstan/extension-installer": "^1.3",
@@ -36,6 +37,7 @@
         "povils/phpmnd": "^3.1",
         "roave/security-advisories": "dev-latest",
         "sebastian/phpcpd": "^6.0",
+        "slevomat/coding-standard": "^8.10",
         "squizlabs/php_codesniffer": "^3.7"
     },
     "conflict": {
@@ -65,14 +67,19 @@
         "drupal-scaffold": {
             "file-mapping": {
                 "[project-root]/.editorconfig": false,
+                "[web-root]/.csslintrc": false,
+                "[web-root]/.eslintignore": false,
+                "[web-root]/.eslintrc.json": false,
                 "[web-root]/.ht.router.php": false,
                 "[web-root]/INSTALL.txt": false,
                 "[web-root]/README.md": false,
                 "[web-root]/README.txt": false,
                 "[web-root]/example.gitignore": false,
+                "[web-root]/install.php": false,
                 "[web-root]/modules/README.txt": false,
                 "[web-root]/profiles/README.txt": false,
                 "[web-root]/sites/README.txt": false,
+                "[web-root]/sites/default/README.txt": false,
                 "[web-root]/sites/default/default.services.yml": false,
                 "[web-root]/sites/default/default.settings.php": false,
                 "[web-root]/sites/example.settings.local.php": false,
