--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "drupal/coder": "^8.3",
         "ergebnis/composer-normalize": "^2.30",
         "friendsoftwig/twigcs": ">=4",
+        "johnatas-x/grumphp-drupal-check": "^2.0",
         "mglaman/phpstan-drupal": "^1.1",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpcompatibility/php-compatibility": "^9.3",
