--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
           git config --global core.eol lf
 
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -70,8 +70,8 @@ jobs:
           command: |
             composer update --optimize-autoloader --no-interaction --no-progress ${{ matrix.composer-flags }}
             composer info -D
-  PHPMD:
-    name: Run PHPMD scanning
+  quality:
+    name: Run GrumPHP scanning
     runs-on: ubuntu-latest
 
     steps:
@@ -79,13 +79,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@aa1fe473f9c687b6fb896056d771232c0bc41161
+        uses: shivammathur/setup-php@v2
         with:
           coverage: none
-          tools: phpmd
+          php-version: '8.2'
 
-      - name: Run PHPMD
-        run: phpmd . sarif codesize --reportfile phpmd-results.sarif
+      - name: Run GrumPHP
+        run: php ./vendor/bin/grumphp run
         continue-on-error: true
 
       - name: Upload analysis results to GitHub
