--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,9 @@ jobs:
 
       - name: Get Composer cache directory
         id: composer-cache
-        run: echo "dir=$(composer config cache-dir)" >> $GITHUB_OUTPUT
+        run: |
+          DIR=$(composer config cache-dir)
+          echo "dir=$DIR" >> $GITHUB_OUTPUT
 
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -87,7 +89,9 @@ jobs:
 
       - name: Get Composer cache directory
         id: composer-cache
-        run: echo "dir=$(composer config cache-dir)" >> $GITHUB_OUTPUT
+        run: |
+          DIR=$(composer config cache-dir)
+          echo "dir=$DIR" >> $GITHUB_OUTPUT
 
       - name: Cache dependencies
         uses: actions/cache@v3
