--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,7 @@ jobs:
         run: |
           DIR=$(composer config cache-dir)
           echo "dir=$DIR" >> $GITHUB_OUTPUT
+        shell: bash
 
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -92,6 +93,7 @@ jobs:
         run: |
           DIR=$(composer config cache-dir)
           echo "dir=$DIR" >> $GITHUB_OUTPUT
+        shell: bash
 
       - name: Cache dependencies
         uses: actions/cache@v3
