--- a/composer.json
+++ b/composer.json
@@ -23,23 +23,8 @@
         "drush/drush": "^12"
     },
     "require-dev": {
-        "drupal/coder": "^8.3",
-        "ergebnis/composer-normalize": "^2.30",
-        "friendsoftwig/twigcs": ">=4",
-        "johnatas-x/grumphp-drupal-check": "^2.0",
-        "mglaman/phpstan-drupal": "^1.1",
-        "php-parallel-lint/php-parallel-lint": "^1.3",
-        "phpcompatibility/php-compatibility": "^9.3",
-        "phpmd/phpmd": "^2.13",
-        "phpro/grumphp": "^2.0",
-        "phpstan/extension-installer": "^1.3",
-        "phpstan/phpstan": "^1.10",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
-        "povils/phpmnd": "^3.1",
-        "roave/security-advisories": "dev-latest",
-        "sebastian/phpcpd": "^6.0",
-        "slevomat/coding-standard": "^8.10",
-        "squizlabs/php_codesniffer": "^3.7"
+        "johnatas-x/angry-bearded": "^1.0",
+        "roave/security-advisories": "dev-latest"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -57,8 +42,8 @@
             "composer/installers": true,
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
-            "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true,
             "phpro/grumphp": true,
             "ergebnis/composer-normalize": true
         },
@@ -68,6 +53,12 @@
         "drupal-scaffold": {
             "file-mapping": {
                 "[project-root]/.editorconfig": false,
+                "[project-root]/.editorconfig.dist": false,
+                "[project-root]/phpcs.xml.dist": false,
+                "[project-root]/phpmd.xml.dist": false,
+                "[project-root]/phpstan-drupal.neon.dist": false,
+                "[project-root]/phpstan.neon.dist": false,
+                "[project-root]/qodana.yaml.dist": false,
                 "[web-root]/.csslintrc": false,
                 "[web-root]/.eslintignore": false,
                 "[web-root]/.eslintrc.json": false,
