--- a/grumphp.yml
+++ b/grumphp.yml
@@ -11,8 +11,8 @@ grumphp:
     enabled: false
   process_timeout: 60
   ascii:
-    failed: grumphp-grumpy.txt
-    succeeded: grumphp-happy.txt
+    failed: vendor/johnatas-x/angry-bearded/resources/grumpy.txt
+    succeeded: vendor/johnatas-x/angry-bearded/resources/happy.txt
   git_hook_variables:
     VAGRANT_HOST_DIR: .
     VAGRANT_PROJECT_DIR: /var/www
@@ -48,6 +48,7 @@ grumphp:
     phpcpd:
       directory: [
         'web/modules/custom',
+        'web/profiles/custom',
         'web/themes/custom'
       ]
       exclude: [ ]
@@ -68,6 +69,7 @@ grumphp:
       report_width: ~
       whitelist_patterns:
         - web/modules/custom
+        - web/profiles/custom
         - web/themes/custom
       encoding: ~
       ignore_patterns: [ ]
@@ -94,6 +96,7 @@ grumphp:
     phpmd:
       whitelist_patterns:
         - /^web\/modules\/custom\/(.*)/
+        - /^web\/profiles\/custom\/(.*)/
         - /^web\/themes\/custom\/(.*)/
       exclude: [ ]
       report_format: text
@@ -171,6 +174,7 @@ grumphp:
       whitelist_patterns:
         - /^config\/(.*)/
         - /^web\/modules\/custom\/(.*)/
+        - /^web\/profiles\/custom\/(.*)/
         - /^web\/themes\/custom\/(.*)/
       ignore_patterns: [ ]
       object_support: false
