Disable style check on drupal-check (not support, yet)

--- a/grumphp.yml
+++ b/grumphp.yml
@@ -38,6 +38,7 @@ grumphp:
       memory_limit: ~
       deprecations: true
       analysis: false
+      style: false
       php8: true
       exclude_dir: [ ]
     jsonlint:
