--- a/.docksal/etc/nginx/vhosts.conf
+++ b/.docksal/etc/nginx/vhosts.conf
@@ -47,14 +47,6 @@ server {
     proxy_read_timeout 600;
     send_timeout 600;
 
-    # Addvag Configuration
-    location ~ ^/sites/.*/files/(css|js)/optimized {
-      add_header Cache-Control 'public, max-age=31536000, immutable';
-    }
-    location ~ ^/sites/.*/files/(css|js) {
-      gzip_static on;
-    }
-
     # Docksal requirement.
     index index.php index.html;
     fastcgi_buffers 16 16k;
@@ -170,8 +162,7 @@ server {
     }
 
     # Fighting with Styles? This little gem is amazing.
-    # location ~ ^/sites/.*/files/imagecache/ { # For Drupal <= 6
-    location ~ ^/sites/.*/files/styles/ { # For Drupal >= 7
+    location ~ ^/sites/.*/files/(css|js|styles)/ {
         try_files $uri @rewrite;
     }
 
