--- a/web/modules/custom/wholetthelogsout/wholetthelogsout.links.menu.yml
+++ b/web/modules/custom/wholetthelogsout/wholetthelogsout.links.menu.yml
@@ -3,3 +3,9 @@ entity.website.collection:
   route_name: entity.website.collection
   description: 'List and manage website entities.'
   parent: system.admin_structure
+
+entity.event.collection:
+  title: 'Events'
+  route_name: entity.event.collection
+  description: 'List and manage event entities.'
+  parent: system.admin_structure
