--- a/grumphp.yml
+++ b/grumphp.yml
@@ -5,6 +5,7 @@ grumphp:
   extensions:
     - GrumphpDrupalCheck\ExtensionLoader
     - GrumphpPhpa\ExtensionLoader
+    - GrumphpPhpdd\ExtensionLoader
   ignore_unstaged_changes: true
   stop_on_failure: false
   hide_circumvention_tip: false
@@ -43,28 +44,31 @@ grumphp:
       php8: true
       exclude_dir: [ ]
     jsonlint:
-      ignore_patterns: [
-        'qodana.sarif.json'
-      ]
+      ignore_patterns:
+        - qodana.sarif.json
       detect_key_conflicts: false
     phpa:
       path: web
-      exclude: [
-        'web/core',
-        'web/sites',
-        'web/themes/contrib'
-      ]
+      exclude:
+        - web/core
+        - web/sites
+        - web/themes/contrib
     phpcpd:
-      directory: [
-        'web/modules/custom',
-        'web/profiles/custom',
-        'web/themes/custom'
-      ]
+      directory:
+        - web/modules/contrib
+        - web/profiles/contrib
+        - web/themes/contrib
       exclude: [ ]
       fuzzy: false
       min_lines: 5
       min_tokens: 70
-      triggered_by: [ 'php' ]
+      triggered_by:
+        - inc
+        - install
+        - module
+        - php
+        - profile
+        - theme
     phpcs:
       standard:
         - phpcs.xml
@@ -95,13 +99,36 @@ grumphp:
         - yml
       exclude: [ ]
       show_sniffs_error_path: true
+    phpdd:
+      files:
+        - web/modules/custom
+        - web/profiles/custom
+        - web/themes/custom
+      target: '8.1'
+      after: ~
+      exclude: []
+      max_size: ~
+      file_extensions:
+        - inc
+        - install
+        - module
+        - php
+        - profile
+        - theme
+      skip_checks: []
     phplint:
       exclude: [ ]
       jobs: ~
       short_open_tag: false
       ignore_patterns:
         - "#vendor/(.*)#"
-      triggered_by: [ 'php', 'phtml', 'php3', 'php4', 'php5' ]
+      triggered_by:
+        - inc
+        - install
+        - module
+        - php
+        - profile
+        - theme
     phpmd:
       whitelist_patterns:
         - /^web\/modules\/custom\/(.*)/
@@ -109,8 +136,10 @@ grumphp:
         - /^web\/themes\/custom\/(.*)/
       exclude: [ ]
       report_format: text
-      ruleset: ['phpmd.xml']
+      ruleset:
+        - phpmd.xml
       triggered_by:
+        - inc
         - install
         - module
         - php
@@ -123,6 +152,7 @@ grumphp:
         - core
         - modules/contrib
         - profiles/contrib
+        - sites
         - themes/contrib
       exclude_name: [ ]
       exclude_path: [ ]
